Fixing animation overlapping section below

--- a/src/index.sass
+++ b/src/index.sass
@@ -17,3 +17,9 @@ code
 
 :root
   scroll-behavior: smooth
+
+.lottieContainer
+  svg
+    max-height: 500px
+    @media (min-width: 1400px)
+      max-height: 600px
